# auth-service

./: .env  Cargo.toml  docker-compose.yml
src/: main.rs
src/config/: mod.rs
src/handlers/: mod.rs
