[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
config = "0.13.2"
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"] }
eyre = "0.6.8"
color-eyre ="0.6.2"
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = "0.3.16"